--- a/application.yaml
+++ b/application.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: HEAD
     path: dev
   destination:
-    server: https://kubertnetes.default.svc
+    server: https://kubernetes.default.svc
     namespace: myapp
   syncPolicy:
     syncOptions:
